--- a/src/enchante/templates/table/schema.py.jinja
+++ b/src/enchante/templates/table/schema.py.jinja
@@ -1,6 +1,11 @@
+import uuid
 from datetime import datetime
 
-from pydantic import UUID4, BaseModel
+from pydantic import BaseModel, ConfigDict
+
+from enchante.utils import optional
+
+__all__ = ["{{ object }}Update", "{{ object }}Create", "{{ object }}"]
 
 
 class {{ object }}Create(BaseModel):
@@ -8,6 +13,12 @@ class {{ object }}Create(BaseModel):
 
 
 class {{ object }}(BaseModel):
-    uid: UUID4
+    model_config = ConfigDict(from_attributes=True)
+
+    uid: uuid.UUID
     created_at: datetime
     updated_at: datetime | None
+
+@optional
+class {{ object }}Update({{ object }}):
+    pass
